# youtube-transcript-rag-project

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  streamlit_app.py  test.py
.github/workflows/: build.yml
src/: embedding.py  grok.py  loggings.py  mongo_utils.py  prompt.py  qdrant.py  query.py  retrieve.py  youtube.py
